agregados iconos de error

--- a/index.html
+++ b/index.html
@@ -22,12 +22,24 @@
       <main>
         <section class="try_sign"><p><b>Try it free 7 days</b> then $20/mo. thereafter</p></section>
         <section class="form">
-            <input id="first_name" placeholder="First Name"/>
-            <input id="last_name" placeholder="Last Name"/>
-            <input id="email_adress" placeholder="Email Address"/>
-          <input id="password" type="password" placeholder="Password"/>
-          <button class="claim_button"><a>CLAIM YOUR FREE TRIAL </a></button>
-          <div class="terms">
+            <div class="inputDiv">
+              <input id="first_name" placeholder="First Name"/>
+              <div class="error"><img src="./images/icon-error.svg"></div>
+            </div>
+            <div class="inputDiv">
+              <input id="last_name" placeholder="Last Name"/>
+              <div class="error"><img src="./images/icon-error.svg"></div>
+            </div>
+            <div class="inputDiv">
+              <input id="email_adress" placeholder="Email Address"/>
+              <div class="error"><img src="./images/icon-error.svg"></div>
+            </div>
+            <div class="inputDiv">
+              <input id="password" type="password" placeholder="Password"/>
+             <div class="error"><img src="./images/icon-error.svg"></div>
+           </div>
+            <button class="claim_button"><a>CLAIM YOUR FREE TRIAL </a></button>
+         <div class="terms">
             <h3>By clicking the button, you are agreeing to our <a href="#Terms_and_services">Terms and Services</a></h3>
           </div>
           
