--- a/index.html
+++ b/index.html
@@ -24,28 +24,30 @@
         <section class="form">
             <div class="inputDiv">
               <input id="first_name" placeholder="First Name"/>
-              <div class="error"><img src="./images/icon-error.svg"></div>
+              <div class="error" id="er1"><img src="./images/icon-error.svg"></div>
             </div>
             <div class="inputDiv">
               <input id="last_name" placeholder="Last Name"/>
-              <div class="error"><img src="./images/icon-error.svg"></div>
+              <div class="error" id="er2"><img src="./images/icon-error.svg"></div>
             </div>
             <div class="inputDiv">
-              <input id="email_adress" placeholder="Email Address"/>
-              <div class="error"><img src="./images/icon-error.svg"></div>
+              <input id="email" placeholder="Email Address"/>
+              <div class="error"id="er3"><img src="./images/icon-error.svg"></div>
             </div>
             <div class="inputDiv">
               <input id="password" type="password" placeholder="Password"/>
-             <div class="error"><img src="./images/icon-error.svg"></div>
-           </div>
-            <button class="claim_button"><a>CLAIM YOUR FREE TRIAL </a></button>
+              <div class="error" id="er4">
+                <img src="./images/icon-error.svg">
+              </div>
+            </div>
+            <button class="claim_button" onclick="control()"><a>CLAIM YOUR FREE TRIAL </a></button>
          <div class="terms">
             <h3>By clicking the button, you are agreeing to our <a href="#Terms_and_services">Terms and Services</a></h3>
           </div>
-          
         </section>
       </main>
     <footer>
     </footer>
+    <script src="./js/index.js"></script>
   </body>
 </html>
